# tauri-example

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
